z-index fix.

--- a/wwwroot/scss/theme_client_components.scss
+++ b/wwwroot/scss/theme_client_components.scss
@@ -456,6 +456,7 @@
                 background: linear-gradient(to bottom, rgba(90, 94, 107, 0) 0%, rgba(37, 140, 246, 0.45) 333.62%);
                 height: $height-full;
                 width: $width-full;
+                z-index: -1;
             }
         }
     }
